<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="com.example.android.quizapp.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <include
                    layout="@layout/progress_bar" />
            </RelativeLayout>
            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/ultra"
                android:text="@string/question4"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/q4CorrectAnswer1"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/question4Option1" />

            <CheckBox
                android:id="@+id/q4WrongAnswer"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/question4Option2" />

            <CheckBox
                android:id="@+id/q4CorrectAnswer2"
                android:layout_marginLeft="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:text="@string/question4Option3"
                android:layout_marginBottom="70dp" />
        </LinearLayout>

        <include
            layout="@layout/next_button"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</ScrollView>