<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <include
                    layout="@layout/progress_bar" />
            </RelativeLayout>

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/ultra"
                android:text="@string/question2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question3RGroup">
                <RadioButton
                    android:id="@+id/q2WrongAnswer1"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/question2Option1" />
                <RadioButton
                    android:id="@+id/q2WrongAnswer2"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:text="@string/question2Option2" />

                <RadioButton
                    android:id="@+id/q2CorrectAnswer"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:text="@string/question2Option3"
                    android:layout_marginBottom="22dp" />
            </RadioGroup>
        </LinearLayout>

        <include
            layout="@layout/next_button"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</ScrollView>