<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="com.example.android.quizapp.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <include
                    layout="@layout/progress_bar" />
            </RelativeLayout>
            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/ultra"
                android:text="@string/question3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/question3Image"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:src="@drawable/q3" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question3RGroup">
                <RadioButton
                    android:id="@+id/q3CorrectAnswer"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/question3Option1" />
                <RadioButton
                    android:id="@+id/q3WrongAnswer1"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="15sp"
                    android:text="@string/question3Option2" />
                <RadioButton
                    android:id="@+id/q3WrongAnswer2"
                    android:layout_marginLeft="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="15sp"
                    android:text="@string/question3Option3"
                    android:layout_marginBottom="70dp" />
            </RadioGroup>
        </LinearLayout>

        <include
            layout="@layout/next_button"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</ScrollView>